be/refactor: collect(Collectors.toList()) -> toList() 로 수정
#60